added maximum connections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.url=jdbc:postgresql://echo.db.elephantsql.com:5432/lusvmeid
 spring.datasource.username=lusvmeid
 spring.datasource.password=ntX-3k3bloh4clx5-OaJg1oxA7C1vIDN
 spring.jpa.generate-ddl=true
+spring.datasource.maxActive=1
+spring.datasource.max-active=1
