--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,14 @@
 #spring.jpa.generate-ddl=true
 
 
-#spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://echo.db.elephantsql.com:5432/lusvmeid
 spring.datasource.username=lusvmeid
 spring.datasource.password=ntX-3k3bloh4clx5-OaJg1oxA7C1vIDN
 spring.jpa.generate-ddl=true
-spring.datasource.maxActive=1
-spring.datasource.max-active=1
+spring.datasource.tomcat.maxActive=4
+spring.datasource.tomcat.minIdle=0
+spring.datasource.tomcat.maxIdle=0
+spring.datasource.tomcat.minEvictableIdleTimeMillis=100
+spring.datasource.tomcat.timeBetweenEvictionRunsMillis=1000
+spring.datasource.tomcat.testWhileIdle=true
